--- a/index.html
+++ b/index.html
@@ -95,35 +95,54 @@
           </div>
         </div>
         <div class="row justify-content-center">
+          <div class="row justify-content-center">
+            <div class="col-md-6 mb-3">
+              <div class="card">
+                <img src="img/projects/kjppntr.png" class="card-img-top" alt="KJPP Pical Niken Tjahjono App" />
+                <div class="card-body">
+                  <p class="card-text">KJPP Pical Niken Tjahjono is an asset valuation application built on the WordPress platform.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <div class="card">
+                <img src="img/projects/siap-ijazah.png" class="card-img-top" alt="Siap Ijazah App" />
+                <div class="card-body">
+                  <p class="card-text">Siap Ijazah is a Laravel 11-based system for reporting lost certificates or correcting errors related to certificates in Serdang Bedagai Regency.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <div class="card">
+                <img src="img/projects/simutia.png" class="card-img-top" alt="Simutia App" />
+                <div class="card-body">
+                  <p class="card-text">Simutia is a Laravel 11-based system designed for managing student transfers in Serdang Bedagai Regency.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <div class="card">
+                <img src="img/projects/simedan-pantas.png" class="card-img-top" alt="Simedan Pantas App" />
+                <div class="card-body">
+                  <p class="card-text">Simedan Pantas is a Laravel 11-based application integrated with Google Maps API for investment mapping in Medan City.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-md-6 mb-3">
             <div class="card">
-              <img src="img/projects/1.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/projects/lubuk-kertang.jpg" class="card-img-top" alt="Lubuk Kertang Web App" />
               <div class="card-body">
-                <p class="card-text">Siperan USU is Faculty correspondence web application</p>
+                <p class="card-text">Lubuk Kertang Village Web is a CodeIgniter 3-based application designed to manage village information and services.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <div class="card">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="Project 2" />
+              <img src="img/projects/absa.jpg" class="card-img-top" alt="Aspect Based Sentiment Analysis App" />
               <div class="card-body">
-                <p class="card-text">Lubuk kertang village Web</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <div class="card">
-              <img src="img/projects/3.jpg" class="card-img-top" alt="Project 3" />
-              <div class="card-body">
-                <p class="card-text">Leetera.Cy is a mobile application for readers to find recommended books about book cataloging</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <div class="card">
-              <img src="img/projects/4.jpg" class="card-img-top" alt="Project 4" />
-              <div class="card-body">
-                <p class="card-text">Aspect Based Sentiment Analysis is machine learning application in natural language application task</p>
+                <p class="card-text">Aspect-Based Sentiment Analysis is a machine learning application built with PyTorch for model processing and Flask for web integration, aimed at analyzing sentiment in natural language tasks.</p>
               </div>
             </div>
           </div>
